game/src/characters/snapshots/game__characters__combat_beat__tests__snapshots__attacker_died.snap
---
source: game/src/characters/combat_beat.rs
assertion_line: 312
expression: lines
---
- "🤣 Bob attacks Alice, but loses!"
- ☠️ Alice is downed by Bob
