game/src/characters/snapshots/game__characters__combat_beat__tests__snapshots__attacker_died_with_defender_stress.snap
---
source: game/src/characters/combat_beat.rs
assertion_line: 532
expression: lines
---
- "🤣 Bob attacks Alice, but loses!"
- ☠️ Alice is downed by Bob
- "😱 Bob is horrified by the violence, loses 9 sanity."
