game/src/characters/snapshots/game__characters__combat_beat__tests__snapshots__fumble_death.snap
---
source: game/src/characters/combat_beat.rs
assertion_line: 320
expression: lines
---
- 😵 Alice fumbles their attack badly and hurts themself!
- ☠️ Alice is downed by themselves
