game/src/characters/snapshots/game__characters__combat_beat__tests__snapshots__fumble_death_with_weapon_break.snap
---
source: game/src/characters/combat_beat.rs
assertion_line: 543
expression: lines
---
- 🗡️ Alice breaks their Iron Sword
- "🗡️ Alice's Iron Sword shatters mid-swing! (-2 attack)"
- 😵 Alice fumbles their attack badly and hurts themself!
- ☠️ Alice is downed by themselves
