game/src/characters/snapshots/game__characters__combat_beat__tests__snapshots__kill.snap
---
source: game/src/characters/combat_beat.rs
assertion_line: 311
expression: lines
---
- "🔪 Alice attacks Bob, and wins!"
- ☠️ Alice knocks out Bob
