game/src/characters/snapshots/game__characters__combat_beat__tests__snapshots__kill_with_attacker_stress_and_weapon_break.snap
---
source: game/src/characters/combat_beat.rs
assertion_line: 429
expression: lines
---
- 🗡️ Alice breaks their Iron Sword
- "🗡️ Alice's Iron Sword shatters mid-swing! (-2 attack)"
- "🔪 Alice attacks Bob, and wins!"
- ☠️ Alice knocks out Bob
- "😱 Alice is horrified by the violence, loses 12 sanity."
